# drugsimsearch

./: .gitignore  README.md  modal_train.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: default.yaml
data/: sample.smi
molsimsearch/: __init__.py  dataset.py  featurizer.py  loss.py  model.py  train.py
runs/patent_embeddings/: embeddings.csv
scripts/: benchmark.py  benchmark_unimol.py  embed.py  embed_patents.py  plot_umap.py  query.py  train.py
