[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "molsimsearch"
version = "0.1.0"
requires-python = ">=3.9"
description = "GAT molecular embeddings with RDKit property injection"
dependencies = [
    "rdkit>=2023.3.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23.0", "ruff>=0.1"]

[project.scripts]
mss-train = "scripts.train:main"
mss-embed = "scripts.embed:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["molsimsearch*", "scripts*"]
